k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendations
  labels:
    app: recommendations
spec:
  type: ClusterIP
  selector:
    app: recommendations
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
